Fixes centering on IE9+
Max-width being specified for IE9 and above DOES set that width, but it
won't centre the page without plain "width" also being set.

--- a/style.css
+++ b/style.css
@@ -15,8 +15,9 @@ body {
 	left: 0;
 	right: 0;
 
-	min-height: 100vh;
+	width: 100%;
 	max-width: 600px;
+	min-height: 100vh;
 	margin-left: auto;
 	margin-right: auto;
 	text-align: center;
